# MDC-Radar-train-detect_local

./: README.md  extract_radar_lidar.py  extract_radar_lidar2.py  xgboost_train_v5_small.py
radar_track_perception_ekfv8/: CMakeLists.txt  config.json  readme.md
radar_track_perception_ekfv8/models/: RFE.json  scaler.json
radar_track_perception_ekfv8/src/: main.cpp
